1.1.1
-----

- Thumbnails are no longer generated automatically on systems with only one CPU core (such as WASM hosts).


1.1
-----

- Alternative portable implementation of image reading using ImageSharp.