@@ -2,6 +2,7 @@
 -----
 
 - Thumbnails are no longer generated automatically on systems with only one CPU core (such as WASM hosts).
+- Fixed SharpImage pixel data hashing.
 
 
 1.1
